<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
        <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip">
          <!--  Email Label -->

          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/login_username"
              android:textColor="#372c24" />

          <EditText 
              	android:id="@+id/login_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:hint="@string/login_user_hint"
                android:singleLine="true"
                android:inputType="textVisiblePassword|textNoSuggestions"/>
          <!--  Password Label -->

          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/login_password"
              android:textColor="#372c24" />

          <EditText 
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/login_pass_hint"
                android:singleLine="true"
                android:inputType="textPassword"/>
          <!-- Login button -->

          <Button
              android:id="@+id/btnLogin"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dip"
              android:background="@layout/custom_button"
              android:text="@string/login_button"
              android:textColor="@color/white1"
              android:textSize="20sp" />

          <!-- Link to Registration Screen -->

          <TextView
              android:id="@+id/link_to_register"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="40dip"
              android:gravity="center"
              android:text="@string/login_register"
              android:textColor="#0b84aa"
              android:textSize="16sp" />
 
		</LinearLayout>
        <!-- Login Form Ends -->
 
</ScrollView>
