<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
 
   <Button
       android:id="@+id/btn_minus"
       android:layout_width="50dp"
       android:layout_height="50dp"
       android:text="@string/horizontal_picker_minus" />

   <EditText
       android:id="@+id/edit_text_picker"
       android:layout_width="60dp"
       android:layout_height="50dp"
       android:ems="10"
       android:focusable="false"
       android:gravity="center"
       android:inputType="number"
       android:layout_marginTop="1dp"
       android:text="@string/horizontal_picker_value" >

       <requestFocus />
   </EditText>
 
   <Button
       android:id="@+id/btn_plus"
       android:layout_width="50dp"
       android:layout_height="50dp"
       android:text="@string/horizontal_picker_plus" />
</LinearLayout>
